--- a/test/test-vertical.html
+++ b/test/test-vertical.html
@@ -1,4 +1,6 @@
 <!DOCTYPE html>
+<html>
+  <head>
 <title>scrollIntoViewIfNeeded test page</title>
 
 <style type="text/css">
@@ -25,6 +27,8 @@
     background: #BADA55;
   }
 </style>
+</head>
+<body>
 
 <h1>scrollIntoViewIfNeeded test page</h1>
 
@@ -143,3 +147,5 @@
     }, false);
   })();
 </script>
+</body>
+</html>
