--- a/test/test-horizontal.html
+++ b/test/test-horizontal.html
@@ -234,7 +234,7 @@
         <button data-item-idx="99">#99</button>
     </div>
 
-    <script src="./bundle.js"></script>
+    <script src="../dist/bundle.js"></script>
     <script>
         (function() {
             var scrollArea = document.getElementById('scroll-area'),
