--- a/test/test-vertical.html
+++ b/test/test-vertical.html
@@ -213,7 +213,7 @@
         <button data-item-idx="99">#99</button>
     </div>
 
-    <script src="./bundle.js"></script>
+    <script src="../dist/bundle.js"></script>
     <script>
         (function() {
             var scrollArea = document.getElementById('scroll-area'),
