use minified bundle to detect mangle problems

--- a/tests/web-platform/css/cssom-view/scrollIntoView-smooth.html
+++ b/tests/web-platform/css/cssom-view/scrollIntoView-smooth.html
@@ -1,5 +1,5 @@
 <!DOCTYPE HTML>
-<script src="/node_modules/scroll-into-view-if-needed/umd/scroll-into-view-if-needed.js"></script>
+<script src="/node_modules/scroll-into-view-if-needed/umd/scroll-into-view-if-needed.min.js"></script>
 <script src="/resources/testharness.js"></script>
 <script src="/resources/testharnessreport.js"></script>
 <title>Check End Position of smooth scrollIntoView</title>
