--- a/tests/web-platform/custom/borders.html
+++ b/tests/web-platform/custom/borders.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<title>CSSOM View - scrollIntoView - nested scrolling boxes</title>
+<title>Border widths</title>
 <meta charset="utf-8">
 <link rel="help" href="https://drafts.csswg.org/cssom-view/#dom-element-scrollintoview">
 <link rel="help" href="https://heycam.github.io/webidl/#es-operations">
@@ -16,11 +16,12 @@ body.running #testWrapper {
   background-color: whitesmoke;
   overflow: auto;
 }
-body.running #testDiv {
-  width: 200px;
-  height: 200px;
-  background-color: lightgreen;
-  margin: 400px;
+body.running .outer-scroll-container {
+  display: block;
+}
+
+.outer-scroll-container {
+  display: none;
 }
 
 .outer-scroll-container,
@@ -151,54 +152,33 @@ body.running #testDiv {
 <div id="log"></div>
 <script>
 var tiles = document.querySelectorAll(".scroll-tile");
-var outerContainer = document.querySelector(".outer-scroll-container")
-var innerContainer = document.querySelector(".inner-scroll-container")
-var baseX = 4003;
-var baseY = 4003;
-
-var expectedXLeft = 4000;
-var expectedXRight = 4000 - window.innerWidth + outerContainer.clientWidth;
-var expectedXCenter = 4000 - (window.innerWidth / 2) + (outerContainer.clientWidth / 2);
-
-var expectedYTop = 4000;
-var expectedYBottom = 4000 - window.innerHeight + outerContainer.clientHeight;
-var expectedYCenter = 4000 - (window.innerHeight / 2) + (outerContainer.clientHeight / 2);
+var outerContainer = document.querySelector(".outer-scroll-container");
+var innerContainer = document.querySelector(".inner-scroll-container");
 
 [
-  [0, "start", "start", [{x: baseX, y: baseY}, {x: 300, y: 300}, {x:  55, y:55}]],
-  [1, "start", "center", [{x: expectedXCenter, y: baseY}, {x: 200, y: 300}, {x: 100, y:55}]],
-  [2, "start", "end", [{x: baseX, y: baseY}, {x: 100, y: 300}, {x: 145, y:55}]],
-  [3, "center", "start", [{x: baseX, y: baseY}, {x: 300, y: 200}, {x: 55, y:100}]],
-  [4, "center", "center", [{x: baseX, y: baseY}, {x: 200, y: 200}, {x:  100, y:100}]],
-  [5, "center", "end", [{x: baseX, y: baseY}, {x: 100, y: 200}, {x:  145, y:100}]],
-  [6, "end", "start", [{x: baseX, y: baseY}, {x: 300, y: 100}, {x:  55, y:145}]],
-  [7, "end", "center", [{x: baseX, y: baseY}, {x: 200, y: 100}, {x:  100, y:145}]],
-  [8, "end", "end", [{x: baseX, y: baseY}, {x: 100, y: 100}, {x:  145, y:145}]]
-].forEach(([target, block, inline, [viewport, outer, inner]]) => {
+  [0, "start", "start", [{ x: 300, y: 300 }, { x: 55, y: 55 }]],
+  [1, "start", "center", [{ x: 200, y: 300 }, { x: 100, y: 55 }]],
+  [2, "start", "end", [{ x: 100, y: 300 }, { x: 145, y: 55 }]],
+  [3, "center", "start", [{ x: 300, y: 200 }, { x: 55, y: 100 }]],
+  [4, "center", "center", [{ x: 200, y: 200 }, { x: 100, y: 100 }]],
+  [5, "center", "end", [{ x: 100, y: 200 }, { x: 145, y: 100 }]],
+  [6, "end", "start", [{ x: 300, y: 100 }, { x: 55, y: 145 }]],
+  [7, "end", "center", [{ x: 200, y: 100 }, { x: 100, y: 145 }]],
+  [8, "end", "end", [{ x: 100, y: 100 }, { x: 145, y: 145 }]],
+  [0, "nearest", "nearest", [{ x: 23, y: 23 }, { x: 0, y: 0 }]],
+  [8, "nearest", undefined, [{ x: 100, y: 100 }, { x: 145, y: 145 }]]
+].forEach(([target, block, inline, [outer, inner]]) => {
   test(() => {
     window.scrollTo(0, 0);
+    outerContainer.scrollTo(0, 0);
+    innerContainer.scrollTo(0, 0);
     scrollIntoView(tiles[target], {block, inline});
     //tiles[target].scrollIntoView({block, inline});
 
-    console.log(
-      "window",
-      window.scrollX,
-      window.scrollY,
-      "outerContainer",
-      outerContainer.scrollLeft,
-      outerContainer.scrollTop,
-      "innerContainer",
-      innerContainer.scrollLeft,
-      innerContainer.scrollTop
-    );
-
-
-    //assert_approx_equals(window.scrollX, viewport.x, 0.5, 'window.scrollX');
-    //assert_approx_equals(window.scrollY, viewport.y, 0.5, 'window.scrollY');
-    assert_approx_equals(outerContainer.scrollLeft, outer.x, 0.5, 'outerContainer.scrollLeft');
-    assert_approx_equals(outerContainer.scrollTop, outer.y, 0.5, 'outerContainer.scrollTop');
-    assert_approx_equals(innerContainer.scrollLeft, inner.x, 0.5, 'innerContainer.scrollLeft');
-    assert_approx_equals(innerContainer.scrollTop, inner.y, 0.5, 'innerContainer.scrollTop');
+    assert_approx_equals(outerContainer.scrollLeft, outer.x, 1, 'outerContainer.scrollLeft');
+    assert_approx_equals(outerContainer.scrollTop, outer.y, 1, 'outerContainer.scrollTop');
+    assert_approx_equals(innerContainer.scrollLeft, inner.x, 1, 'innerContainer.scrollLeft');
+    assert_approx_equals(innerContainer.scrollTop, inner.y, 1, 'innerContainer.scrollTop');
   }, `scrollIntoView(${JSON.stringify({block, inline})})`);
 });
 
