--- a/tests/web-platform/css/cssom-view/scrollintoview.html
+++ b/tests/web-platform/css/cssom-view/scrollintoview.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <title>CSSOM View - scrollIntoView</title>
 <meta charset="utf-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 <link rel="author" title="Chris Wu" href="mailto:pwx.frontend@gmail.com">
 <link rel="help" href="https://drafts.csswg.org/cssom-view/#dom-element-scrollintoview">
 <link rel="help" href="https://heycam.github.io/webidl/#es-operations">
