fix regression in test

--- a/tests/web-platform/custom/borders.html
+++ b/tests/web-platform/custom/borders.html
@@ -164,7 +164,7 @@ var innerOffsetY = innerContainer.offsetHeight - innerContainer.clientHeight - b
 [
   [0, "start", "start", [{ x: 300, y: 300 }, { x: 55, y: 55 }]],
   [1, "start", "center", [{ x: 200, y: 300 }, { x: 100, y: 55 }]],
-  [2, "start", "nearest", [{ x: 100, y: 300 }, { x: 145 + innerOffsetX, y: 55 }]],
+  [2, "start", "end", [{ x: 100, y: 300 }, { x: 145 + innerOffsetX, y: 55 }]],
   [3, "center", "start", [{ x: 300, y: 200 }, { x: 55, y: 100 }]],
   [4, "center", "center", [{ x: 200, y: 200 }, { x: 100, y: 100 }]],
   [5, "center", "end", [{ x: 100, y: 200 }, { x: 145 + innerOffsetX, y: 100 }]],
