--- a/tests/web-platform/custom/borders.html
+++ b/tests/web-platform/custom/borders.html
@@ -163,13 +163,13 @@ var innerOffsetY = innerContainer.offsetHeight - innerContainer.clientHeight - b
 
 [
   [0, "start", "start", [{ x: 300, y: 300 }, { x: 55, y: 55 }]],
-  [1, "start", "center", [{ x: 200, y: 300 }, { x: 100, y: 55 }]],
+  [1, "start", "center", [{ x: 200, y: 300 }, { x: 100 + innerOffsetX / 2, y: 55 }]],
   [2, "start", "end", [{ x: 100, y: 300 }, { x: 145 + innerOffsetX, y: 55 }]],
-  [3, "center", "start", [{ x: 300, y: 200 }, { x: 55, y: 100 }]],
-  [4, "center", "center", [{ x: 200, y: 200 }, { x: 100, y: 100 }]],
-  [5, "center", "end", [{ x: 100, y: 200 }, { x: 145 + innerOffsetX, y: 100 }]],
+  [3, "center", "start", [{ x: 300, y: 200 }, { x: 55, y: 100 + innerOffsetY / 2 }]],
+  [4, "center", "center", [{ x: 200, y: 200 }, { x: 100 + innerOffsetX / 2, y: 100 + innerOffsetY / 2 }]],
+  [5, "center", "end", [{ x: 100, y: 200 }, { x: 145 + innerOffsetX, y: 100 + innerOffsetY / 2 }]],
   [6, "end", "start", [{ x: 300, y: 100 }, { x: 55, y: 145 + innerOffsetY }]],
-  [7, "end", "center", [{ x: 200, y: 100 }, { x: 100, y: 145 + innerOffsetY }]],
+  [7, "end", "center", [{ x: 200, y: 100 }, { x: 100 + innerOffsetX / 2, y: 145 + innerOffsetY }]],
   [8, "end", "end", [{ x: 100, y: 100 }, { x: 145 + innerOffsetX, y: 145 + innerOffsetY }]],
   [0, "nearest", "nearest", [{ x: 23 + outerOffsetX, y: 23 + outerOffsetY }, { x: 0, y: 0 }]],
   [8, "nearest", undefined, [{ x: 100, y: 100 }, { x: 145 + innerOffsetX, y: 145 + innerOffsetY }]]
